[package]
name = "pubsub"
version = "0.1.0"
authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.2"
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }
